@@ -1,15 +1,20 @@
 package epd.index;
 
 import java.io.File;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.StandardOpenOption;
 import java.util.ArrayDeque;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Queue;
 import java.util.Set;
 
+import javax.xml.bind.annotation.XmlAnyAttribute;
+
+import com.google.gson.ExclusionStrategy;
+import com.google.gson.FieldAttributes;
+import com.google.gson.GsonBuilder;
 import org.openlca.ilcd.commons.Classification;
 import org.openlca.ilcd.commons.DataSetType;
 import org.openlca.ilcd.commons.IDataSet;
@@ -21,7 +26,7 @@ import com.google.gson.Gson;
 
 public class Index {
 
-	private HashMap<DataSetType, TypeNode> nodes = new HashMap<>();
+	private final HashMap<DataSetType, TypeNode> nodes = new HashMap<>();
 
 	public TypeNode getNode(DataSetType type) {
 		TypeNode node = nodes.get(type);
@@ -84,14 +89,11 @@ public class Index {
 	 */
 	public Set<Ref> getRefs() {
 		Set<Ref> refs = new HashSet<>();
-		Queue<Node> queue = new ArrayDeque<>();
-		for (TypeNode node : nodes.values()) {
-			queue.add(node);
-		}
+		var queue = new ArrayDeque<Node>(nodes.values());
 		while (!queue.isEmpty()) {
-			Node n = queue.poll();
-			refs.addAll(n.refs);
-			queue.addAll(n.categories);
+			var node = queue.poll();
+			refs.addAll(node.refs);
+			queue.addAll(node.categories);
 		}
 		return refs;
 	}
@@ -99,11 +101,9 @@ public class Index {
 	public void dump(File file) {
 		if (file == null)
 			return;
-		Gson gson = new Gson();
 		try {
-			String json = gson.toJson(this);
-			byte[] bytes = json.getBytes("utf-8");
-			Files.write(file.toPath(), bytes,
+			String json = AnyAttrExclusion.getGson().toJson(this);
+			Files.writeString(file.toPath(), json,
 					StandardOpenOption.CREATE,
 					StandardOpenOption.TRUNCATE_EXISTING);
 		} catch (Exception e) {
@@ -117,13 +117,37 @@ public class Index {
 			return new Index();
 		try {
 			byte[] bytes = Files.readAllBytes(file.toPath());
-			String json = new String(bytes, "utf-8");
-			Gson gson = new Gson();
+			String json = new String(bytes, StandardCharsets.UTF_8);
+			var gson = AnyAttrExclusion.getGson();
 			return gson.fromJson(json, Index.class);
 		} catch (Exception e) {
 			Logger log = LoggerFactory.getLogger(Index.class);
 			log.error("failed to read index", e);
 			return new Index();
+		}
+	}
+
+	/**
+	 * An exclusion strategy that skips the extension attributes from the
+	 * categories (otherwise we get an illegal reflective access operation on
+	 * the QName type).
+	 */
+	private static class AnyAttrExclusion implements ExclusionStrategy {
+
+		static Gson getGson() {
+			return new GsonBuilder()
+				.setExclusionStrategies(new AnyAttrExclusion())
+				.create();
+		}
+
+		@Override
+		public boolean shouldSkipField(FieldAttributes attributes) {
+			return attributes.getAnnotation(XmlAnyAttribute.class) != null;
+		}
+
+		@Override
+		public boolean shouldSkipClass(Class<?> aClass) {
+			return false;
 		}
 	}
 }
